--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,7 +18,7 @@
                 <a target="_blank" href="https://github.com/Apathyyi">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+                    <i class="fa fa-github fa-stack-1x fa-inverse">github</i>
                   </span>
                 </a>
               </li>
@@ -34,7 +34,7 @@
                 <a target="_blank" href="https://weibo.com/ImApathy">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-weibo fa-stack-1x fa-inverse"></i>
+                    <i class="fa fa-weibo fa-stack-1x fa-inverse">weibo</i>
                   </span>
                 </a>
               </li>
