--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,7 +18,7 @@
                 <a target="_blank" href="https://github.com/Apathyyi">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-github fa-stack-1x fa-inverse">github</i>
+                    <i class="fa fa-github fa-stack-1x fa-inverse"></i>
                   </span>
                 </a>
               </li>
@@ -26,7 +26,11 @@
                 <a target="_blank" href="https://www.zhihu.com/people/Apathy">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa  fa-stack-1x fa-inverse">知</i>
+                    <i class="fa  fa-stack-1x fa-inverse">
+                        <font style="vertical-align:inherit;">
+                            <font style="vertical-align:inherit;">知</font>
+                        </font>
+                     </i>
                   </span>
                 </a>
               </li>
@@ -34,7 +38,7 @@
                 <a target="_blank" href="https://weibo.com/ImApathy">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-weibo fa-stack-1x fa-inverse">weibo</i>
+                    <i class="fa fa-weibo fa-stack-1x fa-inverse"></i>
                   </span>
                 </a>
               </li>
