--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -60,12 +60,12 @@
               (d.head || d.body).appendChild(s);
             })();
           </script>
-          <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+          <noscript>Please enable JavaScript to view the <a href="..//?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
         {% endif %}
       {% endif %}
     {% when 'gitment' %}
         <div id="container"></div>
-        <link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
+        <link rel="stylesheet" href="..//gitment/style/default.css">
         <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
         <script>
         var gitment = new Gitment({
