--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,7 +18,7 @@
                 <a target="_blank" href="https://github.com/Apathyyi">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+                    <i class="fa fa-github fa-stack-1x fa-inverse">github</i>
                   </span>
                 </a>
               </li>
@@ -28,7 +28,7 @@
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fa  fa-stack-1x fa-inverse">
                         <font style="vertical-align:inherit;">
-                            <font style="vertical-align:inherit;">知</font>
+                            <font style="vertical-align:inherit;">知乎</font>
                         </font>
                      </i>
                   </span>
@@ -38,7 +38,7 @@
                 <a target="_blank" href="https://weibo.com/ImApathy">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-weibo fa-stack-1x fa-inverse"></i>
+                    <i class="fa fa-weibo fa-stack-1x fa-inverse">微博</i>
                   </span>
                 </a>
               </li>
@@ -53,7 +53,7 @@
                京ICP备15067287号-3
         </div> -->
         <div class="scrolltop">
-            京ICP备15067287号-3
+            川ICP备15067287号-6
             <a href="javascript:window.scrollTo(0,0)" >TOP</a>
         </div>
         <div class="rss">
