--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,7 +23,7 @@
                 </a>
               </li>
               <li>
-                <a target="_blank" href="https://www.zhihu.com/people/Apathy">
+                <a target="_blank" href="https://www.zhihu.com/people/15b578ced09cde76c952b498702446c1">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fa  fa-stack-1x fa-inverse">
