--- a/_includes/head.html
+++ b/_includes/head.html
@@ -36,7 +36,7 @@
     <link rel="stylesheet" href="/assets/css/{{css}}">
     {% endfor %}
 
-    <link rel="stylesheet" type="text/css" href="/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/font-awesome.min.css">
 
     <script type="text/javascript" src="/bower_components/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
