--- a/_includes/copyright.html
+++ b/_includes/copyright.html
@@ -1,14 +1,14 @@
 <div>
    <p align="center">
          	  {% if page.copyright %}
-             <img src="http://www.ityouknow.com/assets/images/{{ page.copyright }}.jpg" >
+             <img src="http://www.apathyyi.com/assets/images/{{ page.copyright }}.jpg" >
             {% else %}
-             <img src="http://www.ityouknow.com/assets/images/keeppuresmile.jpg" >
+             <img src="http://www.apathyyi.com/assets/images/keeppuresmile.jpg" >
             {% endif %}
          <br/>
-          一个有故事的程序员
+         a so vegetable coder
    </p>
    <p align="center" style="margin-top: 15px; font-size: 11px;color: #cc0000;">
-       <strong>（转载本站文章请注明作者和出处 <a href="http://www.ityouknow.com">纯洁的微笑-ityouknow</a>）</strong>
+       <strong>（转载本站文章请注明作者和出处 <a href="http://www.apathyyi.com">Apathyyi-cute</a>）</strong>
    </p>
-</div>
+</div>yi
