--- a/_includes/copyright.html
+++ b/_includes/copyright.html
@@ -1,7 +1,7 @@
 <div>
    <p align="center">
          	  {% if page.copyright %}
-             <img src="http://www.apathyyi.com/assets/images/{{ page.copyright }}.jpg" >
+             <img src="http://www.apathyyi.com/assets/images/{{ }}.jpg" >
             {% else %}
              <img src="http://www.apathyyi.com/assets/images/apathyyi.jpg" >
             {% endif %}
