--- a/_includes/copyright.html
+++ b/_includes/copyright.html
@@ -1,8 +1,8 @@
 <div>
    <p align="center">
-         	  {% if page.copyright %}
+<!--          	  {% if page.copyright %}
              <img src="http://www.apathyyi.com/assets/images/{{ }}.jpg" >
-            {% else %}
+            {% else %} -->
              <img src="http://www.apathyyi.com/assets/images/apathyyi.jpg" >
             {% endif %}
          <br/>
@@ -11,4 +11,4 @@
    <p align="center" style="margin-top: 15px; font-size: 11px;color: #cc0000;">
        <strong>（转载本站文章请注明作者和出处 <a href="http://www.apathyyi.com">Apathyyi-cute</a>）</strong>
    </p>
-</div>yi
+</div>
