--- a/_includes/copyright.html
+++ b/_includes/copyright.html
@@ -3,7 +3,7 @@
 <!--          	  {% if page.copyright %}
              <img src="http://www.apathyyi.com/assets/images/{{ }}.jpg" >
             {% else %} -->
-             <img src="http://www.apathyyi.com/assets/images/apathyyi.jpg" >
+             <img src="https://github.com/Apathyyi/Apathyyi.github.io/blob/master/assets/images/apathyyi.jpg" >
             {% endif %}
          <br/>
          a so vegetable coder
