--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -35,7 +35,7 @@
                 </a>
               </li>
                   <li>
-                <a target="_blank" href="https://weibo.com/ImApathy">
+                <a target="_blank" href="https://weibo.com/u/6013584128">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fa fa-weibo fa-stack-1x fa-inverse">微博</i>
