--- a/_includes/about.html
+++ b/_includes/about.html
@@ -6,9 +6,9 @@
         <p>2017年，不知道学了些什么，该学什么，各种各样都知道个皮毛，还不知道以后该走哪条路。</p>
         <p>2018年，浑浑噩噩在学校度过了两年了，学习一般，找不到感兴趣的方向，途中学了Python一个月没坚持下去。</p>
         <p>2019年，即将面临实习与毕业，让我下定决心选择一个方向深入学习，不知道是什么驱动了我选择了Java，在此之后从基本是小白（懂一点语法，有一点编程的思想）
-        从3月到6月，真的是抓紧时间在学习，找各种资源，跟着视频一点点的敲代码，做笔记，每天晚上至少看三篇Java的技术文章，看一篇面经才会睡觉，我觉得我每天过的
-        很充实，到后来，我跟着视频开始了自己的第一个联系项目（crm系统），使用的SSH，刚开始跟着视频讲一点写一点，发现没什么用，因为之前才写的类似的功能代码不
-        看原来的代码自己居然写不出来。
+            从3月到6月，真的是抓紧时间在学习，找各种资源，跟着视频一点点的敲代码，做笔记，每天晚上至少看三篇Java的技术文章，看一篇面经才会睡觉，我觉得我每天过的
+            很充实，到后来，我跟着视频开始了自己的第一个联系项目（crm系统），使用的SSH，刚开始跟着视频讲一点写一点，发现没什么用，因为之前才写的类似的功能代码不
+            看原来的代码自己居然写不出来。
         </p>
         <p>我是Apathyyi，一个努力让自己变得优秀的coder</p>
          <p>
@@ -21,7 +21,7 @@
         <p>几篇文章，方便让你快速了解我</p>
         <ul>
            <li>
-            2019-06-26  <strong><a href="https://apathyyi.com/java/2019/06/26/list-to-json-And-dateformat.html" target="_blank">六年程序生涯
+            2019-06-26 <strong><a href="https://apathyyi.com/java/2019/06/26/list-to-json-And-dateformat.html" target="_blank">这就是apathyyi
                 </a></strong>
           </li>
         </ul>
