--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,13 +8,14 @@
         <p>2019年，即将面临实习与毕业，让我下定决心选择一个方向深入学习，不知道是什么驱动了我选择了Java，在此之后从基本是小白（懂一点语法，有一点编程的思想）
             从3月到6月，真的是抓紧时间在学习，找各种资源，跟着视频一点点的敲代码，做笔记，每天晚上至少看三篇Java的技术文章，看一篇面经才会睡觉，我觉得我每天过的
             很充实，到后来，我跟着视频开始了自己的第一个联系项目（crm系统），使用的SSH，刚开始跟着视频讲一点写一点，发现没什么用，因为之前才写的类似的功能代码不
-            看原来的代码自己居然写不出来。
+            看原来的代码自己居然写不出来。...想好了再来补充
         </p>
         <p>我是Apathyyi，一个努力让自己变得优秀的coder</p>
          <p>
           <strong>推荐一个个人公众号，我博客的引路人</strong>：<a href="http://www.ityouknow.com/assets/images/keeppuresmile.jpg" target="_blank">纯洁的微笑（ID：keeppuresmile）</a>，“分享技术、感悟人生”欢迎关注
         </p>
-        <p>有兴趣搭建自己个人技术博客的朋友可以去看下他的文章<a href="http://www.ityouknow.com/other/2018/09/16/create-blog.html">纯洁的微笑</p>
+        <p>有兴趣搭建自己个人技术博客的朋友可以去看下他的文章<a href="http://www.ityouknow.com/other/2018/09/16/create-blog.html">纯洁的微笑
+        </p>
         <p><strong>About name</strong></p>
 
         <h2>Articles</h2>
